# cli-selector

./: Cargo.toml  README.md
src/: lib.rs  main.rs
