[package]
author = "ehsan.ehsanagain@gmail.com"
description = "a simple cli tool for extracting html tags based on a css selector from html text"
edition = "2021"
license = "GPL-3.0"
name = "cli-selector"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.18", features = ["derive"]}
scraper = "0.13.0"
